Bug 346222 - kcmshell5 kwindecoration: cannot drag button to left-most position
Summary: kcmshell5 kwindecoration: cannot drag button to left-most position
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: decorations (other bugs)
Version First Reported In: 5.2.2
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-04-15 15:22 UTC by Alexander Potashev
Modified: 2019-02-11 17:25 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.16.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Potashev 2015-04-15 15:22:43 UTC
If I try to move the "x" (close window) button to the left-most position, the button does not stick there and the whole drag'n'drop operation has no effect. The drag'n'drop operation is always cancelled if mouse pointer goes beyond the canvas, but it should not be so.

Reproducible: Always
Comment 1 Nate Graham 2019-01-08 21:49:45 UTC
Fixed with https://phabricator.kde.org/D17982!
Comment 2 Nate Graham 2019-01-08 21:50:00 UTC
Fixed with https://phabricator.kde.org/D17982!
Comment 3 Nate Graham 2019-02-11 17:25:09 UTC
author	Valerio Pilo <vpilo@coldshock.net>	2019-02-07 16:32:05 +0100
committer	Valerio Pilo <vpilo@coldshock.net>	2019-02-10 13:01:04 +0100
commit	8350c0f2ce666e60ad468a0f2fdce6086d2210f2 (patch)
tree	c5eb4d45b0ff004111b32afeaca8cfd790ab09c9
parent	698b40dbbde327a6824c2c6495201a27b34bc4a2 (diff)
[kcmkwin/kwindecoration] Rewrite the KWin decorations settings as a ConfigModuleHEADmaster
Summary:
* Wrote new KCM based on KQuickAddons::ConfigModule.
* Remade QMLs for Buttons and Themes tabs.
* Updated bridge model code for new plugin lookup API (fixes warnings).
* Fixed decoration shadow changing messing with the previews sizes.
* Fixed button drag and drop issues (see D18104).
* Fixed default settings button behavior and detection of settings changes.
* Updated Get Hot New Stuff.
* Removed apply button in previewbridge.cpp: After applying changes, a theme's KCModule is invalidated.

BUG: 389431
BUG: 350122
BUG: 346222
BUG: 342816
BUG: 397595

{F6574963} | {F6574962} | {F6574961} | {F6574960}

Test Plan:
* Verified saving and loading for every setting
* Checked shadows of Breeze and Oxygen
* Tested all possible drag&drop operations on both sides of the fake titlebar
* Changed color schemes (with `kcmshell5 colors`) while showing the Themes tab to see if all previews update correctly their palettes
* Tested on a fresh Neon-developer account, via kcmshell and systemsettings

Reviewers: #vdg, abetts, ngraham, #kwin, davidedmundson

Reviewed By: #vdg, #kwin, davidedmundson

Subscribers: zzag, GB_2, ngraham, broulik, kwin

Tags: #kwin

Differential Revision: https://phabricator.kde.org/D18458